--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,49 @@
-version: "3.7" 
+version: "3.7"
 services:
-  nginx:
-    image: nginx:1.17.3
-    container_name: nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - ".:/var/www/html/"
-      - "./webserver/nginx.conf:/etc/nginx/nginx.conf"
-    links:
-      - php
-      - mysql
-  php:
-    build:
-      context: .
-    image: phpdocker
-    container_name: php
-    ports:
-      - "9000:9000"
-    volumes:
-      - ".:/var/www/html/"
-  mysql:
-    image: mysql:5.7
-    container_name: mysql
-    ports:
-      - "3307:3306"
-    volumes:
-      - mysql:/var/lib/mysql/
-    environment:
-      MYSQL_DATABASE: 'database'
-      MYSQL_USER: 'root'
-      MYSQL_PASSWORD: '12345678'
-      MYSQL_ROOT_PASSWORD: '12345'
-volumes:
-  mysql:
+    mysql:
+        image: mysql
+        container_name: pwmysql
+        environment:
+            - MYSQL_DATABASE=jpweb
+            - MYSQL_USER=root
+            - MYSQL_ROOT_PASSWORD=root
+        ports:
+            - "3306:3306"
+        volumes:
+            - ./mysql/var/lib/mysql/
+        networks:
+            - rede_docker
+    php:
+        image: php
+        container_name: pwphp
+        build: ./docker/php
+        ports:
+            - "9000:9000"
+        volumes:
+            - ./www:/usr/share/nginx/html
+            - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+        depends_on:
+            - mysql
+        environment:
+            - MYSQL_USER=root
+            - MYSQL_PASSWORD=root
+            - MYSQL_DATABASE=jpweb
+            - MYSQL_DRIVER=pdo_mysql
+            - MYSQL_HOST=mysql
+        networks:
+            - rede_docker
+    nginx:
+        container_name: pwnginx
+        image: nginx
+        volumes:
+            - ./www:/usr/share/nginx/html
+            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        ports:
+            - "8080:80"
+        depends_on:
+            - "php"
+        networks:
+            - rede_docker
+networks:
+    rede_docker:
+        driver: bridge
